deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymentreact
  labels:
    deployment: react
spec:
  replicas: 3
  selector:
    matchLabels:
      pod: react
  template:
    metadata:
      labels:
        pod: react
    spec:
      containers:
      - name: react-gke
        image: eylidal/react-kub-dock:1.0
        ports:
        - containerPort: 3000
