service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    pod: react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  clusterIP: 10.4.8.128
  type: LoadBalancer
